--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/Marat-Gumerov74/Epam-Labs-FrontEnd-2021q2#readme",
   "dependencies": {
     "morsee": "1.0.9",
-    "readline-sync": "1.4.10"
+    "readline": "^1.3.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
